fix: issues with contrast in tags

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@ button:hover,
 
 
 .topic-tag {
-    background-color: #919F93;
+    background-color: #304B33;
     color: white;
     font-size: 0.6rem;
     text-transform: uppercase;
